Improve controllers and remove unnecessary code
